# thead

./: .gitignore  LICENSE  README.md  acmart.py  amsart.py  common.py  lipics.py  setup.cfg  setup.py  thead.py  tmarko.py
.github/workflows/: python-publish.yml
examples/: computablenumbers.yaml
src/thead/: __init__.py  article.py  cli.py  parse.py  recipe.py  tex.py  u2tex.py
src/thead/cls/: __init__.py  acmart.py  amsart.py  article.py  ccs.py  common.py  default.py  ieeetran.py  lipics.py  siamart.py  tex.py
thead/: __main__.py  parse.py  recipe.py  u2tex.py
thead/cls/: __init__.py  acmart.py  amsart.py  common.py  lipics.py  siamart.py
