[metadata]
name = thead
version = 0.0.3-alpha-8
author = Jakub Opršal
author_email = git@jakub-oprsal.info
description = Tools for generating LaTeX headers from metadata
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jakub-oprsal/thead
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  thead = thead.cli:main
